# routers/api/v1/lucky.go
@@ -5,7 +5,6 @@ import (
 	"net/http"
 	"xiaoyuzhou/pkg/app"
 	"xiaoyuzhou/pkg/e"
-	"xiaoyuzhou/pkg/setting"
 	"xiaoyuzhou/pkg/util"
 	"xiaoyuzhou/service/lucky_service"
 )
@@ -43,40 +42,77 @@ func AddLucky(c *gin.Context) {
 	appG.Response(http.StatusOK, e.SUCCESS, nil)
 }
 
+// UploadLucky
+// @Summary 上传今日好运excel
+// @Param file formData file true "excel文件"
+// @Accept json
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /manager/lucky/upload [post]
+// @Security ApiKeyAuth
+// @Tags Manager
+func UploadLucky(c *gin.Context) {
+	appG := app.Gin{C: c}
+	file, _, err := c.Request.FormFile("file")
+	if err != nil {
+		appG.Response(http.StatusBadRequest, "参数错误", nil)
+		return
+	}
+	if err := lucky_service.Import(file); err != nil {
+		appG.Response(http.StatusOK, "导入excel失败", nil)
+		return
+	}
+	appG.Response(http.StatusOK, e.SUCCESS, nil)
+}
+
 // EditLucky
 // @Summary 修改今日好运内容
-// @Param _ body EditLuckyForm true "参数"
+// @Param _ body EditLuckyForm true "修改好运内容"
 // @Produce json
 // @Accept json
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
-// @Router /manager/lucky/{id} [put]
+// @Router /manager/lucky [put]
 // @Security ApiKeyAuth
 // @Tags Manager
+func EditLucky(c *gin.Context) {
+	appG := app.Gin{C: c}
+	var edF EditLuckyForm
+	if err := c.ShouldBindJSON(&edF); err != nil {
+		appG.Response(http.StatusBadRequest, e.ERROR, nil)
+		return
+	}
+	if err := lucky_service.EditLucky(edF.Type, edF.Id, edF.Content); err != nil {
+		appG.Response(http.StatusOK, "编辑失败", nil)
+		return
+	}
+	appG.Response(http.StatusOK, e.SUCCESS, nil)
+}
 
-// DeleteLucky
-// @Summary 修改今日好运内容
-// @Param id path int true "ID"
-// @Produce json
-// @Accept json
-// @Success 200 {object} app.Response
-// @Failure 500 {object} app.Response
-// @Router /manager/lucky/{id} [delete]
-// @Security ApiKeyAuth
-// @Tags Manager
+//DeleteLucky
+//@Summary 删除今日好运内容
+//@Param _ body DeleteLuckyForm  true "删除lucky"
+//@Produce json
+//@Accept json
+//@Success 200 {object} app.Response
+//@Failure 500 {object} app.Response
+//@Router /manager/lucky [delete]
+//@Security ApiKeyAuth
+//@Tags Manager
+func DeleteLucky(c *gin.Context) {
+	appG := app.Gin{C: c}
+	var delF DeleteLuckyForm
+	if err := c.ShouldBindJSON(&delF); err != nil {
+		appG.Response(http.StatusBadRequest, e.ERROR, nil)
+		return
+	}
+	if err := lucky_service.Delete(delF.Type, delF.IdList); err != nil {
+		appG.Response(http.StatusOK, "删除失败", nil)
+		return
+	}
 
-//func DeleteLucky(c *gin.Context) {
-//	appG := app.Gin{C: c}
-//	id := com.StrTo(c.Param("id")).MustInt()
-//	luckI := lucky_service.LuckyInputOne{
-//		Id: id,
-//	}
-//	if err := luckI.Delete(); err != nil {
-//		appG.Response(http.StatusOK, err.Error(), nil)
-//		return
-//	}
-//	appG.Response(http.StatusOK, e.SUCCESS, nil)
-//}
+	appG.Response(http.StatusOK, e.SUCCESS, nil)
+}
 
 // GetLucky
 // @Summary 获取今日好运内容
@@ -92,7 +128,7 @@ func GetLucky(c *gin.Context) {
 	luckI := lucky_service.LuckyInputContent{
 		Type:     c.Query("type"),
 		PageNum:  util.GetPage(c),
-		PageSize: setting.AppSetting.PageSize,
+		PageSize: util.GetPageSize(c),
 	}
 	_type, lucks, count, err := luckI.Get()
 	if err != nil {
@@ -110,4 +146,15 @@ type GetLuckyResponse struct {
 	Lists interface{} `json:"lists"`
 	Count int         `json:"count"`
 	Type  string      `json:"type"`
+}
+
+type DeleteLuckyForm struct {
+	Type   string `json:"type" binding:"required" enums:"spell,song,todo"` //spell:咒语，song:歌曲, todo:适宜
+	IdList []int  `json:"id_list" binding:"required"`
+}
+
+type EditLuckyForm struct {
+	Id      int    `json:"id" binding:"required"`
+	Type    string `json:"type" binding:"required" enums:"spell,song,todo"`
+	Content string `json:"content" binding:"required"`
 }
